Suite documentation Equipment
